--- a/Detail.storyboard
+++ b/Detail.storyboard
@@ -25,7 +25,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P6a-07-NIl">
-                                                <rect key="frame" x="20" y="75" width="280" height="330"/>
+                                                <rect key="frame" x="0.0" y="75" width="320" height="330"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </imageView>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nuthin' but Pugs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1q-uY-lRP">
@@ -68,8 +68,8 @@
                                                 <color key="textColor" red="0.23921568627450979" green="0.32549019607843138" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DefaultProfilePic.png" translatesAutoresizingMaskIntoConstraints="NO" id="yLf-C4-m1F">
-                                                <rect key="frame" x="20" y="20" width="50" height="50"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="binoculars.png" translatesAutoresizingMaskIntoConstraints="NO" id="yLf-C4-m1F">
+                                                <rect key="frame" x="10" y="13" width="50" height="50"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                         </subviews>
@@ -407,7 +407,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="DefaultProfilePic.png" width="217" height="249"/>
+        <image name="binoculars.png" width="512" height="512"/>
         <image name="checkmark.png" width="159" height="159"/>
         <image name="clipboard-512.png" width="512" height="512"/>
         <image name="hearts-512.png" width="512" height="512"/>
